--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <section class="conteudo-principal">
-        <h1 class="titulo-pricipal">Meus objetivos para o ano</h1>
+        <h1 class="titulo-principal">MEUS OBJETIVOS PARA O ANO<span></span></h1>
         <div class="botoes">
-            <button class="botao"> Terminar curso</button>
+            <button class="botao ativo"> Terminar curso</button>
             <button class="botao"> Iniciar curso técnico</button>
             <button class="botao"> Terminar ensino médio</button>
             <button class="botao"> Iniciar faculdade</button>
