--- a/index.html
+++ b/index.html
@@ -12,10 +12,29 @@
         <h1 class="titulo-principal">MEUS OBJETIVOS PARA O ANO<span></span></h1>
         <div class="botoes">
             <button class="botao ativo"> Terminar curso</button>
-            <button class="botao"> Iniciar curso técnico</button>
             <button class="botao"> Terminar ensino médio</button>
+            <button class="botao"> Iniciar curso técnico</button>
             <button class="botao"> Iniciar faculdade</button>
         </div>
+        <div class="abas-textos">
+            <div class="aba-conteudo ativo">
+                <h3 class="aba-conteudo-titulo-principal">Terminar curso</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Terminar ensino médio</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Iniciar curso técnico</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Iniciar faculdade</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            </div>
+        </div>
     </section>
+    <script src="main.js"></script>
 </body>
 </html>
