--- a/index.html
+++ b/index.html
@@ -20,18 +20,22 @@
             <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">Terminar curso</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Terminar ensino médio</h3>
+                <h3 class="aba-conteudo-titulo-principal">Formatura ensino médio</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Iniciar curso técnico</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Iniciar faculdade</h3>
+                <h3 class="aba-conteudo-titulo-principal">Faculdade</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
             </div>
         </div>
     </section>
