--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Meus Objetivos</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="conteudo-principal">
         <h1 class="titulo-principal">MEUS OBJETIVOS PARA O ANO<span></span></h1>
@@ -20,25 +22,106 @@
             <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">Terminar curso</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
+                <div class="contador">
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Dias</p>
+                    </div>
+
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Horas</p>
+                    </div>
+
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Minutos</p>
+                    </div>
+
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Segundos</p>
+                    </div>
+                </div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Formatura ensino médio</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
+                <div class="contador">
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Dias</p>
+                    </div>
+
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Horas</p>
+                    </div>
+
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Minutos</p>
+                    </div>
+
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Segundos</p>
+                    </div>
+                </div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Iniciar curso técnico</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
+                <div class="contador">
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Dias</p>
+                    </div>
+
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Horas</p>
+                    </div>
+
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Minutos</p>
+                    </div>
+
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Segundos</p>
+                    </div>
+                </div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Faculdade</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
+                <div class="contador">
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Dias</p>
+                    </div>
+
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Horas</p>
+                    </div>
+
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Minutos</p>
+                    </div>
+
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-texto">Segundos</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <script src="main.js"></script>
 </body>
+
 </html>
