--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador">
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="dias0">7</p>
                         <p class="contador-digito-texto">Dias</p>
                     </div>
 
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="horas0">7</p>
                         <p class="contador-digito-texto">Horas</p>
                     </div>
 
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="minutos0">7</p>
                         <p class="contador-digito-texto">Minutos</p>
                     </div>
 
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="segundos0">7</p>
                         <p class="contador-digito-texto">Segundos</p>
                     </div>
                 </div>
@@ -49,22 +49,22 @@
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador">
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="dias1">7</p>
                         <p class="contador-digito-texto">Dias</p>
                     </div>
 
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="horas1">7</p>
                         <p class="contador-digito-texto">Horas</p>
                     </div>
 
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="minutos1">7</p>
                         <p class="contador-digito-texto">Minutos</p>
                     </div>
 
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="segundos1">7</p>
                         <p class="contador-digito-texto">Segundos</p>
                     </div>
                 </div>
@@ -74,22 +74,22 @@
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador">
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="dias2">7</p>
                         <p class="contador-digito-texto">Dias</p>
                     </div>
 
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="horas2">7</p>
                         <p class="contador-digito-texto">Horas</p>
                     </div>
 
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="minutos2">7</p>
                         <p class="contador-digito-texto">Minutos</p>
                     </div>
 
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="segundos2">7</p>
                         <p class="contador-digito-texto">Segundos</p>
                     </div>
                 </div>
@@ -99,22 +99,22 @@
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador">
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="dias3">7</p>
                         <p class="contador-digito-texto">Dias</p>
                     </div>
 
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="horas3">7</p>
                         <p class="contador-digito-texto">Horas</p>
                     </div>
 
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="minutos3">7</p>
                         <p class="contador-digito-texto">Minutos</p>
                     </div>
 
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">7</p>
+                        <p class="contador-digito-numero" id="segundos3">7</p>
                         <p class="contador-digito-texto">Segundos</p>
                     </div>
                 </div>
